--- a/Effigy/Effigy.Web/EffigyMaster.Master
+++ b/Effigy/Effigy.Web/EffigyMaster.Master
@@ -200,8 +200,10 @@
 
                     <li class="dropdown dropdown-user">
                         <a class="dropdown-toggle" data-toggle="dropdown">
-                            <img src="../assets/images/placeholder.jpg" alt="">
+                            <asp:Image ID="imgUserLoggedIn" runat="server" />
+                            
                             <asp:Label ID="lblUserNameUpper" runat="server"></asp:Label>
+                            
                             <i class="caret"></i>
                         </a>
 
