--- a/Effigy/Effigy.Web/EffigyMaster.Master
+++ b/Effigy/Effigy.Web/EffigyMaster.Master
@@ -200,10 +200,10 @@
 
                     <li class="dropdown dropdown-user">
                         <a class="dropdown-toggle" data-toggle="dropdown">
-                            <asp:Image ID="imgUserLoggedIn" runat="server" />
-                            
+                            <asp:Image ID="imgUserLoggedIn" runat="server" CssClass="img-circle img-sm" />
+
                             <asp:Label ID="lblUserNameUpper" runat="server"></asp:Label>
-                            
+
                             <i class="caret"></i>
                         </a>
 
@@ -239,7 +239,7 @@
                             <div class="category-content">
                                 <div class="media">
                                     <a href="#" class="media-left">
-                                        <img src="../assets/images/placeholder.jpg" class="img-circle img-sm" alt=""></a>
+                                        <asp:Image ID="imgMenuSideUser" runat="server" CssClass="img-circle img-sm" /></a>
                                     <div class="media-body">
                                         <asp:Label ID="lblUserName" runat="server" CssClass="media-heading text-semibold"></asp:Label>
 
