update login page changes

--- a/Effigy/Effigy.Web/assets/css/core.css
+++ b/Effigy/Effigy.Web/assets/css/core.css
@@ -7792,3 +7792,9 @@ h6.panel-title,
 .navbar-header .navbar-brand > img {
     height: auto;
 }
+.validation {
+    color: red;
+}
+.text-center {
+    text-align: center
+}
