--- a/Effigy/Effigy.Web/EffigyMaster.Master
+++ b/Effigy/Effigy.Web/EffigyMaster.Master
@@ -8,30 +8,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Effigy</title>
-
-    <!-- Core JS files -->
-    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-
-    <script src="http://code.jquery.com/jquery-migrate-1.1.0.js"></script>
-    <%--    <script type="text/javascript" src="../assets/js/core/libraries/jquery.min.js"></script>--%>
-    <script type="text/javascript" src="../assets/js/plugins/loaders/pace.min.js"></script>
-    <script type="text/javascript" src="../Scripts/loader.js"></script>
-    <script type="text/javascript" src="../assets/js/core/libraries/bootstrap.min.js"></script>
-    <script type="text/javascript" src="../assets/js/plugins/loaders/blockui.min.js"></script>
-    <!-- /core JS files -->
-
     <!-- Global stylesheets -->
+
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900" rel="stylesheet" type="text/css" />
     <link href="../assets/css/icons/icomoon/styles.css" rel="stylesheet" type="text/css" />
     <link href="../assets/css/bootstrap.css" rel="stylesheet" type="text/css" />
     <link href="../assets/css/core.css" rel="stylesheet" type="text/css" />
     <link href="../assets/css/components.css" rel="stylesheet" type="text/css" />
     <link href="../assets/css/colors.css" rel="stylesheet" type="text/css" />
-    <script src="../assets/js/plugins/tables/datatables/datatables.min.js"></script>
     <!-- /global stylesheets -->
-
-
-
+    <!-- Core JS files -->
+    <script type="text/javascript" src="../Scripts/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="../Scripts/loader.js"></script>
+    <script type="text/javascript" src="../assets/js/plugins/tables/datatables/datatables.min.js"></script>
+    <script type="text/javascript" src="../assets/js/plugins/loaders/pace.min.js"></script>
+    <script type="text/javascript" src="../assets/js/core/libraries/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../assets/js/plugins/loaders/blockui.min.js"></script>
+    <!-- /core JS files -->
     <!-- Theme JS files -->
     <script type="text/javascript" src="../assets/js/plugins/visualization/d3/d3.min.js"></script>
     <script type="text/javascript" src="../assets/js/plugins/visualization/d3/d3_tooltip.js"></script>
@@ -40,12 +33,9 @@
     <script type="text/javascript" src="../assets/js/plugins/forms/selects/bootstrap_multiselect.js"></script>
     <script type="text/javascript" src="../assets/js/plugins/ui/moment/moment.min.js"></script>
     <script type="text/javascript" src="../assets/js/plugins/pickers/daterangepicker.js"></script>
-    <%--    <script type="text/javascript" src="../Scripts/jquery.validate.min.js"></script>
-    <script type="text/javascript" src="../Scripts/jquery.validate.wrapper.js"></script>--%>
-
-    <script type="text/javascript" src="../assets/js/core/app.js"></script>
     <script type="text/javascript" src="../CustomScript/MenuRender.js"></script>
-    <%-- <script type="text/javascript" src="../assets/js/pages/dashboard.js"></script>--%>
+    <script type="text/javascript" src="../assets/js/core/app.js"></script>
+
     <!-- /theme JS files -->
 
 </head>
