--- a/Effigy/Effigy.Web/EffigyMaster.Master
+++ b/Effigy/Effigy.Web/EffigyMaster.Master
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Effigy</title>
+    <title>Traderz Planet</title>
     <!-- Global stylesheets -->
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900" rel="stylesheet" type="text/css" />
@@ -35,7 +35,7 @@
     <script type="text/javascript" src="../assets/js/plugins/pickers/daterangepicker.js"></script>
     <script type="text/javascript" src="../CustomScript/MenuRender.js"></script>
     <script type="text/javascript" src="../assets/js/core/app.js"></script>
-
+    <link rel="shortcut icon" type="image/x-icon" href="../Images/tp_icon_Febicon.ico" />
     <!-- /theme JS files -->
 
 </head>
@@ -45,8 +45,9 @@
         <!-- Main navbar -->
         <div class="navbar navbar-inverse">
             <div class="navbar-header">
-                <a class="navbar-brand" href="index.html">
-                    <img src="../assets/images/logo_light.png" alt=""></a>
+                <a class="navbar-brand" href="#">
+                    <img src="../Images/traderzPlanet.png" title="" alt="" width="90" />
+                </a>
 
                 <ul class="nav navbar-nav visible-xs-block">
                     <li><a data-toggle="collapse" data-target="#navbar-mobile"><i class="icon-tree5"></i></a></li>
