Update footer in project

--- a/Effigy/Effigy.Web/EffigyMaster.Master
+++ b/Effigy/Effigy.Web/EffigyMaster.Master
@@ -279,8 +279,8 @@
                         </asp:ContentPlaceHolder>
 
                         <!-- Footer -->
-                        <div class="footer text-muted">
-                            &copy; 2015. <a href="#">Limitless Web App Kit</a> by <a href="http://themeforest.net/user/Kopyov" target="_blank">Eugene Kopyov</a>
+                         <div class="footer text-muted text-center">
+                            <%--&copy; Copyright 2018. <a href="#">Powered</a> by <a href="#" target="_blank">TraderzPlanet</a>--%>
                         </div>
                         <!-- /footer -->
 
